--- a/composer.json
+++ b/composer.json
@@ -58,6 +58,7 @@
         },
         "branch-alias": {
             "dev-master": "2.6-dev"
-        }
+        },
+      "symfony-assets-install": "symlink"
     }
 }
